templates/newapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: vikunja
  labels:
    app: vikunja
spec:
  selector:
    app: vikunja
  ports:
    - protocol: TCP
      port: 3456
      targetPort: 3456
