templates/newapp/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingressroute
  namespace: longhorn-system
  annotations:
    gethomepage.dev/href: "https://longhorn.denniscloud.io"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Block Storage
    gethomepage.dev/group: Services
    gethomepage.dev/icon: longhorn.png
    gethomepage.dev/app: longhorn
    gethomepage.dev/name: Longhorn
    gethomepage.dev/widget.type: "longhorn"
    gethomepage.dev/widget.url: "https://longhorn.denniscloud.io"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.denniscloud.io`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: longhorn-cert-secret
